[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/gui/GuiOverlayDebug.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/font/font_default.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/gui/gui_popup_console.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/theme/theme_debug.tres" type="Theme" id=4]

[node name="GuiDebug" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1880.0
margin_bottom = 1040.0
alignment = 1

[node name="ConsoleContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1250.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="GuiConsole" parent="MarginContainer/HBoxContainer/ConsoleContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_right = 1250.0
margin_bottom = 1040.0

[node name="DebugInformation" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1254.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="DisplayFramerate" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
unique_name_in_owner = true
margin_right = 626.0
margin_bottom = 96.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "00"
tab_size = 5
text = "00"

[node name="DisplayGameTime" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
unique_name_in_owner = true
margin_top = 100.0
margin_right = 626.0
margin_bottom = 196.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
tab_size = 5
text = "00:00:00"

[node name="DisplayPlayTime" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
unique_name_in_owner = true
margin_top = 200.0
margin_right = 626.0
margin_bottom = 296.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "00"
tab_size = 5
text = "00"

[node name="DisplayChunkCoords" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
unique_name_in_owner = true
margin_top = 300.0
margin_right = 626.0
margin_bottom = 396.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "0, 0"
tab_size = 5
text = "0, 0"

[node name="DisplayCoordinate" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
unique_name_in_owner = true
margin_top = 400.0
margin_right = 626.0
margin_bottom = 1040.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "0, 0, 0"
tab_size = 5
text = "0, 0, 0"
